--- a/templates/index.html
+++ b/templates/index.html
@@ -407,36 +407,29 @@ _________________________________________________________ -->
                     <div class="row">
 
                         <div class="col-md-8 col-md-offset-2">
-                            <form id="contact-form" method="" action="/">
+                            <form id="contact-form" method="post" action="/">
                                 {% csrf_token %}
-                                <div class="messages">
-
-                                </div>
-
-                                <div class="controls">
-
+                                 <div class="controls">
                                     <div class="row">
-                                        <div class="col-md-6">
-                                            <input type="text" id="id_first_name" name="name" class="form-control" placeholder="Nome *" required="required">
+                                      <div class="col-md-6">
+                                        {{ form.first_name }}
+                                      </div>
+                                      <div class="col-md-6">
+                                          {{ form.last_name }}
+                                      </div>
+                                      <div class="col-md-6">
+                                          {{ form.email }}
+                                      </div>
+                                      <div class="col-md-6">
+                                          {{ form.phone }}
+                                      </div>
+                                      <div class="col-md-12 text-center">
+                                          {{ form.message_text }}
                                         </div>
-                                        <div class="col-md-6">
-                                            <input type="text" id="id_last_name" name="surname" class="form-control" placeholder="Sobrenome *" required="required">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="text" id="id_email" name="email" class="form-control" placeholder="Seu email *" required="required">
-                                        </div>
-                                        <div class="col-md-6">
-                                            <input type="text" id="id_phone" name="phone" class="form-control" placeholder="Seu Telefone">
-                                        </div>
-                                        <div class="col-md-12">
-                                            <textarea id="id_message_text" name="message" class="form-control" placeholder="Mensagem para mim *" rows="4" required="required"></textarea>
-                                        </div>
-                                        <div class="col-md-12 text-center">
-                                            <button type="submit" class="btn btn-primary btn-lg" value="Envie a mensagem">Envie a mensagem</button>
-                                        </div>
+                                        <button type="submit">ENVIAR</button>
+
                                     </div>
                                 </div>
-
                             </form>
                         </div>
 
