--- a/templates/testa.html
+++ b/templates/testa.html
@@ -8,7 +8,8 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button value="." name="ENVIAR">ENVIAR</button>
+        <button type="submit">ENVIAR</button>
     </form>
 </body>
 </html>
+
