--- a/templates/salvo.html
+++ b/templates/salvo.html
@@ -1,10 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+<head>
+    <meta charset="utf-8">
+    <meta name="robots" content="all,follow">
+    <meta name="googlebot" content="index,follow,snippet,archive">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Freelancer | Oficina de sistemas</title>
+
+    <meta name="keywords" content="">
+
+    <link href='https://www.google.com.br/maps/@-9.5323892,-37.2926395,15z?hl=pt-BR' rel='stylesheet' type='text/css'>
+
+
+    <!-- Bootstrap and Font Awesome css -->
+    <link href="/media/css/font-awesome.css" rel="stylesheet">
+    <link href="/media/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Theme stylesheet -->
+    <link href="/media/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+
+    <!-- Custom stylesheet - for your changes -->
+    <link href="/media/css/custom.css" rel="stylesheet">
+
+    <!-- owl carousel css -->
+
+    <link href="/media/css/owl.carousel.css" rel="stylesheet">
+    <link href="/media/css/owl.theme.css" rel="stylesheet">
+
+    <!-- CSS Animations -->
+    <link href="/media/css/animate.css" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/media/img/favicon.png">
+
+    <!-- Mordernizr -->
+    <script src="/media/js/modernizr-2.6.2.min.js"></script>
+
+    <!-- Responsivity for older IE -->
+    <!--[if lt IE 9]>
+    <script src="js/respond.min.js"></script>
+<![endif]-->
 </head>
-<body>
-<h3>Dessa vez foi!</h3>
+
+<body bgcolor="#fff8dc">
+<div class="section contact" id="contact" data-animate="bounceIn">
+    <div class="container">
+        <div class="col-md-12">
+            <h3>Obrigado pela mensagem!</h3>
+            <span>É uma enorme satisfação ter a sua atenção, comprometo-me com a responsabilidade de retornar, mediante o conteúdo da mensagem!</span><br>
+            <a href="/">Voltar ao Portofólio</a>
+        </div>
+    </div>
+</div>
+
+<script src="/media/js/jquery-1.11.0.min.js"></script>
+    <script src="/media/js/bootstrap.min.js"></script>
+
+    <!-- for demo purpose -->
+    <script src="/media/js/jquery.cookie.js"></script>
+
+    <!-- waypoints for scroll spy -->
+    <script src="/media/js/waypoints.min.js"></script>
+
+    <!-- maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true"></script>
+    <script src="/media/js/gmaps.js"></script>
+
+    <!-- masonry layout -->
+    <script src="/media/js/masonry.pkgd.min.js"></script>
+
+    <!-- owl carousel -->
+    <script src="/media/js/owl.carousel.min.js"></script>
+
+
+    <!-- jQuery scroll to -->
+    <script src="/media/js/jquery.scrollTo.min.js"></script>
+
+    <!-- jQuery counter -->
+    <script src="/media/js/jquery.counterup.min.js"></script>
+
+    <!-- jQuery parallax -->
+    <script src="/media/js/jquery.parallax-1.1.3.js"></script>
+
+    <!-- main js file -->
+
+    <script src="/media/js/front.js"></script>
+
 </body>
 </html>
