--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     <link href="/media/css/animate.css" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/media/img/favicon.png">
+    <link rel="shortcut icon" href="/media/icon1.png">
 
     <!-- Mordernizr -->
     <script src="/media/js/modernizr-2.6.2.min.js"></script>
@@ -72,15 +72,13 @@ _________________________________________________________ -->
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#intro">Intro</a>
                     </li>
-                    <li><a href="#about">About</a>
+                    <li><a href="#about">Sobre mim</a>
                     </li>
-                    <li><a href="#services">Services</a>
+                    <li><a href="#services">Serviços</a>
                     </li>
-                    <li><a href="#testimonials">Testimonials</a>
+                    <li><a href="#testimonials">Áreas de atuação</a>
                     </li>
-                    <li><a href="#customers">Clients</a>
-                    </li>
-                    <li><a href="#contact">Contact</a>
+                    <li><a href="#contact">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -169,7 +167,7 @@ _________________________________________________________ -->
 
                                 <div class="skill-item">
                                     <div class="progress-title">
-                                        HTML
+                                        SQL
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-skill3" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
@@ -230,7 +228,7 @@ _________________________________________________________ -->
                             <div class="icon"><i class="fa fa-university"></i>
                             </div>
                             <br>
-                            <h3 class="heading">coaching</h3>
+                            <h3 class="heading">Mentoring</h3>
                             <p style="text-align: justify;">Serviço sobre a necessidade de alguns, profissionais ou estudantes, em algumas tecnolgias das quais possuo afinidade.
                                 O serviço de coaching surge para acessorar, remotamente ou presencialmente, no tocante a desenvolvimento de sistemas, no planejamento, elaboração e gerenciamento de projetos.</p>
                         </div>
@@ -245,7 +243,7 @@ _________________________________________________________ -->
                         <div class="col-md-4" data-animate="fadeInUp">
                             <div class="icon"><i class="fa fa-tachometer"></i> 
                             </div>
-                            <h3 class="heading">backed-end</h3>
+                            <h3 class="heading">Backed-end</h3>
                             <p>Serviço para a funcionalidade do sistema, a integração com banco de dados, exportação e contrução de api's, entre outros que estão neste ponto.</p>
                         </div>
 
@@ -302,7 +300,7 @@ _________________________________________________________ -->
                         <div class="item">
                             <div class="icon"><i class="fa fa-users"></i>
                             </div>
-                            <h4><span class="counter"> </span>Muitos<br>Clientes satisfeitos</h4>
+                            <h4><span class="counter"> </span>Coaching<br>em tecnologia</h4>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
@@ -316,7 +314,7 @@ _________________________________________________________ -->
                         <div class="item">
                             <div class="icon"><i class="fa fa-font"></i>
                             </div>
-                            <h4><span class="counter"></span>Estudos<br>Dedicados</h4>
+                            <h4><span class="counter"></span>Mentoring<br>Dedicados sobre Desenvolvimento de sistemas.</h4>
                         </div>
                     </div>
                 </div>
@@ -339,57 +337,6 @@ _________________________________________________________ -->
         <!-- *** CUSTOMERS ***
 _________________________________________________________ -->
 
-        <div class="section text-gray" id="customers">
-            <div class="container">
-                <div class="col-md-12">
-
-
-                    <div class="row">
-                        <div class="col-sm-4 col-md-2  col-xs-6">
-                            <div class="customer">
-                                <img class="img-responsive" src="/media/img/customers/kofola.png" title="Kofola" data-placement="bottom" data-toggle="tooltip" alt="">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4 col-md-2  col-xs-6">
-                            <div class="customer">
-                                <img class="img-responsive" src="/media/img/customers/evian.png" title="Evian" data-placement="bottom" data-toggle="tooltip" alt="">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4 col-md-2  col-xs-6">
-                            <div class="customer">
-                                <img class="img-responsive" src="/media/img/customers/cslink.png" title="CS Link" data-placement="bottom" data-toggle="tooltip" alt="">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4 col-md-2  col-xs-6">
-                            <div class="customer">
-                                <img class="img-responsive" src="/media/img/customers/botas66.png" title="Botas 66 Concept store" data-placement="bottom" data-toggle="tooltip" alt="">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4 col-md-2  col-xs-6">
-                            <div class="customer">
-                                <img class="img-responsive" src="/media/img/customers/mdfc.png" title="MediaFabríca" data-placement="bottom" data-toggle="tooltip" alt="">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-4 col-md-2  col-xs-6">
-                            <div class="customer">
-                                <img class="img-responsive" src="/media/img/customers/vanek.png" title="VANĚK Strojírenská výroba" data-placement="bottom" data-toggle="tooltip" alt="">
-                            </div>
-                        </div>
-
-                    </div>
-                    <!-- /.row -->
-
-
-                </div>
-                <!-- /.12 -->
-            </div>
-            <!-- /.container -->
-        </div>
         <!-- /.section -->
 
         <!-- *** CUSTOMERS END *** -->
@@ -402,7 +349,7 @@ _________________________________________________________ -->
                 <div class="col-md-12">
 
 
-                    <h2 class="title">Me contate!</h2>
+                    <h2 class="title">Fale comigo!</h2>
 
                     <div class="row">
 
@@ -425,8 +372,10 @@ _________________________________________________________ -->
                                       </div>
                                       <div class="col-md-12 text-center">
                                           {{ form.message_text }}
-                                        </div>
-                                        <button type="submit">ENVIAR</button>
+                                      </div>
+                                        <br>
+
+                                        <button type="submit" class="btn btn-primary btn-lg">ENVIAR</button>
 
                                     </div>
                                 </div>
@@ -465,8 +414,8 @@ _________________________________________________________ -->
                     <div class="col-sm-6">
 
                         <p class="social">
-                            <a href="#" class="external facebook" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-linkedin"></i></a>
-                            <a href="#" class="external gplus" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-google-plus"></i></a>
+                            <a href="https://br.linkedin.com/in/carlos-andré-dantas-de-lima-a1822127" class="external facebook" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://plus.google.com/116190738519015627932" class="external gplus" data-animate-hover="shake" data-animate="fadeInUp"><i class="fa fa-google-plus"></i></a>
                         </p>
                     </div>
                     <!-- /.6 -->
