ajustes finais para upload

--- a/templates/administrativo/index.html
+++ b/templates/administrativo/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <div class="container fadeInUp" >
-    <h3 class="title animated fadeInUp" >Vizitantes : {{ tamanho }} </h3><small>Data da última mensagem postada: {{data}}.</small>
+    <h3 class="title animated fadeInUp" >Mensagens : {{ tamanho }} </h3><small>Data da última mensagem postada: {{data}}.</small>
     <ul class="col-md-3 animated fadeInUp">
     {% for i in mensagens %}
         <li class="list-group-item-success">
