--- a/templates/administrativo/login.html
+++ b/templates/administrativo/login.html
@@ -43,18 +43,31 @@
 <![endif]-->
 </head>
 <body>
-    <div class="container fadeInUp" >
-    <h3 class="title animated fadeInUp" >Mensagens : {{ tamanho }} </h3><h2 class="title animated fadeInUp">Data da última mensagem postada: {{data}}.</h2>
-    <ul class="col-md-3 animated fadeInUp list-group">
-    {% for i in mensagens %}
-        <li class="list-group-item-success list-group-item">
-            <a href="/mensagem_contato/{{ i.id }}" ><span>{{ i.first_name }}</span> <span  class="badge">{{ i.data }}</span></a>
-        </li>
-     {% empty %}
-            <h3>Sem mensagens!</h3>
-    {% endfor %}
-    </ul>
-    <a class="title animated fadeInUp" href="/logout/">Voltar ao Portofólio</a>
-   </div>
+       <div  class="container text-center">
+        <h3 class="title animated fadeInUp">Acesso ao Sistema</h3>
+       </div>
+       <div class="container text-center animated fadeInUp">
+           <form class="form-horizontal" method="post">
+              {% csrf_token %}
+              <div class="control-group">
+                <label for="id_username">Nome do usuário </label>
+                <div class="controls">
+                   <input id="id_username" type="text" class="form-control" name="username" maxlength="30" />
+                </div>
+              </div>
+              <div class="control-group">
+                <p><label for="id_password">Senha </label>
+                <div class="controls">
+                  <input type="password" class="form-control" name="password" id="id_password" />
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="controls">
+                  <br />
+                  <button  class="btn btn-primary" type="submit">Acessar</button>
+                </div>
+              </div>
+            </form>
+       </div>
 </body>
 </html>
