ajustes finais para upload

--- a/templates/administrativo/email.html
+++ b/templates/administrativo/email.html
@@ -77,6 +77,9 @@
             {{ form.remetente }}<br />
         </div>
         <div class="form-group">
+            {{ form.titulo_email }}
+        </div>
+        <div class="form-group">
             {{ form.texto }}<br />
         </div>
         <button type="submit" class="btn btn-primary">ENVIAR</button>
