ajustes finais para upload

--- a/templates/administrativo/mensagens.html
+++ b/templates/administrativo/mensagens.html
@@ -32,7 +32,7 @@
     <link href="/media/css/animate.css" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/media/img/favicon.png">
+    <link rel="shortcut icon" href="/media/img/icon1.png">
 
     <!-- Mordernizr -->
     <script src="/media/js/modernizr-2.6.2.min.js"></script>
