ajustes finais para upload

--- a/templates/administrativo/email.html
+++ b/templates/administrativo/email.html
@@ -70,7 +70,7 @@
 
 <body>
 
-    <h2 class="title">Enviar e-mail</h2>
+    <h2 class="title" style="text-align: center;">Enviar e-mail</h2>
     <form role="form" method="post">
         {% csrf_token %}
         <div class="form-group">
