ajustes finais para upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -230,7 +230,7 @@ _________________________________________________________ -->
                             <br>
                             <h3 class="heading">Mentoring</h3>
                             <p style="text-align: justify;">Serviço sobre a necessidade de alguns, profissionais ou estudantes, em algumas tecnolgias das quais possuo afinidade.
-                                O serviço de coaching surge para acessorar, remotamente ou presencialmente, no tocante a desenvolvimento de sistemas, no planejamento, elaboração e gerenciamento de projetos.</p>
+                                O serviço de mentoring surge para acessorar, remotamente ou presencialmente, no tocante a desenvolvimento de sistemas, no planejamento, elaboração e gerenciamento de projetos.</p>
                         </div>
 
                         <div class="col-md-4" data-animate="fadeInUp">
@@ -300,7 +300,7 @@ _________________________________________________________ -->
                         <div class="item">
                             <div class="icon"><i class="fa fa-users"></i>
                             </div>
-                            <h4><span class="counter"> </span>Coaching<br>em tecnologia</h4>
+                            <h4><span class="counter"> </span>Liderança<br>em equipe</h4>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
