ajustes finais para upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -229,22 +229,26 @@ _________________________________________________________ -->
                             </div>
                             <br>
                             <h3 class="heading">Mentoring</h3>
-                            <p style="text-align: justify;">Serviço sobre a necessidade de alguns, profissionais ou estudantes, em algumas tecnolgias das quais possuo afinidade.
-                                O serviço de mentoring surge para acessorar, remotamente ou presencialmente, no tocante a desenvolvimento de sistemas, no planejamento, elaboração e gerenciamento de projetos.</p>
+                            <p style="text-align: justify;">O serviço de mentoring recai sobre as tecnologias que tenho afinidade, domino e tenho a possibilidade de passar parte deste conhecimento.
+                                Serve como uma base, instrução, para profissionais e ou estudantes. Neste serviço de mentoring destaco desenvolviemento com python, python-django, mysql,
+                                ruby on rails, engenharia de softwares.</p>
                         </div>
 
                         <div class="col-md-4" data-animate="fadeInUp">
                             <div class="icon"><i class="fa fa-html5"></i>
                             </div>
                             <h3 class="heading">Front-end</h3>
-                            <p>Serviço para o desenvolvimento (codificação) da parte visual de um sistema.</p>
+                            <p style="text-align: justify;">Este serviço visa comtenplar a disponibilidade de funcionalidades a um dado layout, dar imagem para um projeto. As tecnologias usadas para o serviço
+                            de front-end são javascript, bootstrap, angularjs, css3, html5.</p>
                         </div>
 
                         <div class="col-md-4" data-animate="fadeInUp">
                             <div class="icon"><i class="fa fa-tachometer"></i> 
                             </div>
                             <h3 class="heading">Backed-end</h3>
-                            <p>Serviço para a funcionalidade do sistema, a integração com banco de dados, exportação e contrução de api's, entre outros que estão neste ponto.</p>
+                            <p style="text-align: justify;">Dedicado a parte estutural de um projeto, atende a manipulação dos dados, de como serão tratados esses dados. A parte em que se destacam as lógicas da
+                            aplicação, inlclui neste serviço de backed-end as linguagens de programação pyhton, ruby, R, scala, c++, c, php. Os banco de dados que fazem parte dos serviços
+                            que presto são mysql, postgrees e mongodb.</p>
                         </div>
 
                     </div>
@@ -298,9 +302,9 @@ _________________________________________________________ -->
                     </div>
                     <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
                         <div class="item">
-                            <div class="icon"><i class="fa fa-users"></i>
+                            <div class="icon"><i class="fa fa-bookmark"></i>
                             </div>
-                            <h4><span class="counter"> </span>Liderança<br>em equipe</h4>
+                            <h4><span class="counter"> </span>Manipulação<br>de dados</h4>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6" data-animate="fadeInUp">
